--- a/contact.css
+++ b/contact.css
@@ -69,7 +69,7 @@ input[type="submit"]:hover {
 
 /* Container styles */
 .container {
-  max-width: 800px;
+  max-width: 80%;
   margin: 0 auto;
   text-align: center;
 }
@@ -78,7 +78,7 @@ input[type="submit"]:hover {
 
 footer {
   width: 100%;
-  position: fixed;
+  position: relative;
   bottom: 0;
   left: 0;
 }
