--- a/contact.css
+++ b/contact.css
@@ -1,31 +1,21 @@
 body,
 h1 {
   font-family: "Montserrat", sans-serif;
-}
-img {
-  margin-bottom: -7px;
-}
-.w3-row-padding img {
-  margin-bottom: 12px;
-}
-html,
-body {
   height: 100%;
-}
-
-.w3-content {
-  height: 20%;
-  width: 200%;
+  width: 100%;
 }
 
 /* Form styles */
 form {
-  background-color: #f9f9f9;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  padding: 20px;
+ 
+ 	margin: 0 auto;
+	height: 100%;
+	width: 90%;
+	padding: 20px;
+	border: 2px solid #ddd;
+	background-color: #f5f5f5;
 }
-
+ 
 .form-group {
   margin-bottom: 20px;
 }
@@ -51,12 +41,15 @@ textarea {
 
 input[type="submit"] {
   background-color: #4caf50;
-  color: white;
-  padding: 12px 20px;
-  border: none;
-  border-radius: 4px;
+  color: #fff;
+  font-size: 18px;
+  padding: 10px;
+  display: block;
+  margin : 0 auto;
+  border: 1px;
+  border-radius: 5px;
   cursor: pointer;
-}
+} 
 
 input[type="submit"]:hover {
   background-color: #45a049;
@@ -67,20 +60,11 @@ input[type="submit"]:hover {
   width: 100%;
 }
 
-/* Container styles */
-.container {
-  max-width: 80%;
-  margin: 0 auto;
-  text-align: center;
-}
-
 /* Footer Format */
 
 footer {
-  width: 100%;
-  position: relative;
-  bottom: 0;
-  left: 0;
+  display: block;
+  justify-content: center;
 }
 
 footer i {
