--- a/index.css
+++ b/index.css
@@ -1,32 +1,10 @@
 body,
 h1 {
   font-family: "Montserrat", sans-serif;
-}
-img {
-  margin-bottom: -7px;
-}
-.w3-row-padding img {
-  margin-bottom: 12px;
-}
-html,
-body {
   height: 100%;
-  margin: 0;
-  overflow: hidden;
+  width: 100:;
 }
-.w3-content {
-  height: calc(100% - 192px); /* subtract height of header and footer */
-  overflow: auto;
-}
-footer {
-  position: sticky;
-  bottom: 0;
-  width: 100%;
-  height: 64px;
-  background-color: #f1f1f1;
-  text-align: center;
-  overflow: hidden;
-}
+ 
 
 button.generate-btn {
   background-color: #4CAF50;
