--- a/signin.css
+++ b/signin.css
@@ -1,41 +1,45 @@
 body,
 h1 {
   font-family: "Montserrat", sans-serif;
-}
-img {
-  margin-bottom: -7px;
-}
-.w3-row-padding img {
-  margin-bottom: 12px;
-}
-html,
-body {
-  height: 100%;
-  overflow: hidden;
-}
-.w3-content {
-  height: 10%;
-  width: 200%;
-  overflow: hidden;
+  height: 100%; 
+  width: 100%;
 }
 
-section h2 {
+form {
+	margin: 0 auto;
+	height: 100%;
+	width: 90%;
+	padding: 20px;
+	border: 2px solid #ddd;
+	background-color: #f5f5f5;
+}
+
+ section h2 {
   font-family: "Montserrat", sans-serif;
   font-size: 25px;
   font-weight: bold;
-  margin-top: 40px;
-  margin-bottom: 20px;
-  margin-right: 75px;
   text-align: center;
-}
+} 
+
+
+/* Style for the submission buttons */
+ input[type="submit"] {
+  background-color: #4caf50;
+  color: #fff;
+  font-size: 18px;
+  padding: 10px;
+  display: block;
+  margin : 0 auto;
+  border: 1px;
+  border-radius: 5px;
+  cursor: pointer;
+} 
 
 /* Footer Format */
 
 footer {
-  width: 100%;
-  position: fixed;
-  bottom: 0;
-  left: 0;
+  display: block;
+  justify-content: center;
 }
 
 footer i {
