--- a/resume_builder/templates/resumebuilder.html
+++ b/resume_builder/templates/resumebuilder.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Contact Us</title>
+    <title>Resume Builder</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="contact.css">
+    <link rel="stylesheet" href="static/css/resumebuilder.css">
   </head>
   <body>
+  
+	<!-- Future Note: When logged in, users will be able to open a "Profile page in which they can edit profile info" -->
+  
     <!-- Sidebar -->
     <nav class="w3-sidebar w3-black w3-animate-top w3-xxlarge" style="display:none;padding-top:150px" id="mySidebar">
       <a href="javascript:void(0)" onclick="w3_close()" class="w3-button w3-black w3-xxlarge w3-padding w3-display-topright" style="padding:6px 24px">
@@ -18,7 +21,7 @@
       <div class="w3-bar-block w3-center">
         <a href="index.html" class="w3-bar-item w3-button w3-text-grey w3-hover-black">Home</a>
         <a href="about.html" class="w3-bar-item w3-button w3-text-grey w3-hover-black">About</a>
-        <a href="qualifications.html" class="w3-bar-item w3-button w3-text-grey w3-hover-black">Resume/Job Info</a>
+        <a href="qualifications.html" class="w3-bar-item w3-button w3-text-grey w3-hover-black">Qualifications</a>
 		<a href="contact.html" class="w3-bar-item w3-button w3-text-grey w3-hover-black">Contact Us</a>
         <a href="signin.html" class="w3-bar-item w3-button w3-text-grey w3-hover-black">Sign In/Register</a>
       </div>
@@ -33,37 +36,35 @@
         <div class="w3-clear"></div>
         <header class="w3-center w3-margin-bottom">
           <h1>
-            <b>Contact Us</b>
+            <b>Build Your Custom Resume</b>
           </h1>
           <p>
-            <b>If you have any questions, concerns, or issues, feel free to fill out the form below to contact us. We will follow up with you as soon as we can. Thank you!</b>
+            <b>Enter the URL to your desired Job Listing below</b>
           </p>
+          <p class="w3-padding-16">
+		  <!-- User Input URL -->
+		    <label for="url-input">Past Experience:</label>
+			<input type="text" id="url-input" name="past-experience-text">
+		  
+			<label for="url-input">Job Title</label>
+			<input type="text" id="url-input" name="past-experience-text">
+			
+			<label for="cars">What do you want generated?</label>
+
+			<select name="Drop-Down" id="Drop-Down">
+				<option value="Resume">Resume</option>
+				<option value="Cover Letter">Cover Letter</option>
+			</select>
+			
+			
+			<label for="url-input">Enter URL:</label>
+			<input type="url" id="url-input" name="url">
+			</p>
+			<!-- Will Define the generate() function later -->
+			<button class="generate-btn" onclick = "generate()">Generate</button>
         </header>
       </div>
     </div>
-	  
-	  <!-- Page Content -->
-	<div class="container my-5">
-		<div class="row">
-			<div class="col-md-6 offset-md-3">
-				<form>
-					<div class="form-group">
-						<label for="name">Name:</label>
-						<input type="text" class="form-control" id="name" required>
-					</div>
-					<div class="form-group">
-						<label for="email">Email:</label>
-						<input type="email" class="form-control" id="email" required>
-					</div>
-					<div class="form-group">
-						<label for="message">Message:</label>
-						<textarea class="form-control" id="message" rows="5" required></textarea>
-					</div>
-					<input type="submit" value="Submit">
-				</form>
-			</div>
-		</div>
-	</div>
 	
 	<!-- Footer -->
     <footer class="w3-container w3-padding-64 w3-center w3-opacity w3-xlarge" style="margin-top:128px">
@@ -86,4 +87,4 @@
       }
     </script>
   </body>
-</html>    
+</html>
