--- a/resume_builder/templates/contact.html
+++ b/resume_builder/templates/contact.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Resume Input Form</title>
+    <title>Contact Us</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="qualifications.css">
+    <link rel="stylesheet" href="static/css/contact.css">
   </head>
   <body>
     <!-- Sidebar -->
@@ -33,54 +33,55 @@
         <div class="w3-clear"></div>
         <header class="w3-center w3-margin-bottom">
           <h1>
-            <b>Resume/Job Posting Information</b>
+            <b>Contact Us</b>
           </h1>
           <p>
-            <b>Enter in all of your relevant information below</b>
+            <b>If you have any questions, concerns, or issues, feel free to fill out the form below to contact us. We will follow up with you as soon as we can. Thank you!</b>
           </p>
         </header>
       </div>
     </div>
-    <!-- User Input Section -->
-    <div class="w3-container w3-padding-64">
-	 <form action="output.html" method = "get">
-       <!-- <form> -->
-        <label for="name">Name:</label>
-        <input type="text" required id="name" name="name">
-        <br>
-        <label for="email">Email:</label>
-        <input type="email" required id="email" name="email">
-        <br>
-        <label for="phone">Phone:</label>
-        <input type="tel" required id="phone" name="phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}">
-		<small>Format: 123-456-7890</small>
-		<br>
-        <br>
-        <label for="address">Address:</label>
-        <input type="text" required id="address" name="address">
-		<br>
-        <label for="education">Education:</label>
-        <textarea id="education" required name="education"></textarea>
-        <br>
-        <label for="experience">Experience:</label>
-        <textarea id="experience" required name="experience"></textarea>
-        <br>
-        <label for="skills">Skills:</label>
-        <textarea id="skills" required name="skills"></textarea>
-        <br>
-        <label for="references">References:</label>
-        <textarea id="references" required name="references"></textarea>
-		<br>
-         <label for="objective">Title Of Job Position You Are Applying For</label>
-        <textarea id="objective" required name="objective"></textarea> 
-		<br>
-         <label for="description">Paste Job Description Below</label>
-        <textarea id="description" required name="description"></textarea> 
-        <br>
-        <input type="submit" value="Generate Resume">
-      </form>
-    </div>
-    <!-- Footer -->
+	  
+	  <!-- Page Content -->
+	<div class="container my-5">
+		<div class="row">
+			<div class="col-md-6 offset-md-3">
+				<form onsubmit="return submitForm()">
+					<div class="form-group">
+						<label for="name">Name:</label>
+						<input type="text" class="form-control" id="name" required>
+					</div>
+					<div class="form-group">
+						<label for="email">Email:</label>
+						<input type="email" class="form-control" id="email" required>
+					</div>
+					<div class="form-group">
+										<label for="message">Message:</label>
+					<textarea class="form-control" id="message" rows="5" required></textarea>
+					</div>
+					<input type="submit" value="Submit">
+				</form>
+			</div>
+		</div>
+	</div>
+	
+	<!-- Popup confirmation message -->
+	<div id="confirmation-popup" class="w3-modal">
+		<div class="w3-modal-content">
+			<header class="w3-container w3-dark-gray">
+				<h2>Thank you!</h2>
+				<span onclick="document.getElementById('confirmation-popup').style.display='none'" class="w3-button w3-display-topright">&times;</span>
+			</header>
+			<div class="w3-container">
+				<p>Your form has been submitted successfully.</p>
+			</div>
+			<footer class="w3-container w3-dark-gray">
+				<p></p>
+			</footer>
+		</div>
+	</div>
+	
+	<!-- Footer -->
     <footer class="w3-container w3-padding-64 w3-center w3-opacity w3-xlarge" style="margin-top:128px">
       <i class="fa fa-facebook-official w3-hover-opacity"></i>
       <i class="fa fa-instagram w3-hover-opacity"></i>
@@ -99,6 +100,14 @@
       function w3_close() {
         document.getElementById("mySidebar").style.display = "none";
       }
+	  
+	  // Popup confirmation message after submitting the form
+	  function submitForm() {
+		// You can use AJAX to submit the form instead of a normal form submission if you prefer
+		document.getElementById('confirmation-popup').style.display='block';
+		return false; // Prevent the page from reloading
+	  }
     </script>
   </body>
 </html>
+
