--- a/templates/output.html
+++ b/templates/output.html
@@ -41,9 +41,9 @@
 
            <p class="w3-padding-16">
 		  <!-- User Input URL -->
-		<h1>Resume Information</h1>
-			<p>Name: <span id="name"></span></p>
-			<p>Email: <span id="email"></span></p>
+		  <h1>Resume Information</h1>
+			<!--<p>Name:{{user_input}} <span id="name"></span></p>
+			<p>Email:{{user_input}} <span id="email"></span></p>
 			<p>Phone: <span id="phone"></span></p>
 			<p>Address: <span id="address"></span></p>
 			<p>Education: <span id="education"></span></p>
@@ -51,10 +51,15 @@
 			<p>Skills: <span id="skills"></span></p>
 			<p>References: <span id="references"></span></p>
 			<p>Objective: <span id="objective"></span></p>
-			<p>Description: <span id="description"></span></p>
+			<p>Description: <span id="description"></span></p> -->
+      <p>
+        {{chat_response}}
+      </p>
         </header>
       </div>
     </div> 
+
+
     <script>
 	
      function w3_open() {
