--- a/templates/contact.html
+++ b/templates/contact.html
@@ -19,8 +19,8 @@
         <a href="index.html" class="w3-bar-item w3-button w3-text-grey w3-hover-black">Home</a>
         <a href="about.html" class="w3-bar-item w3-button w3-text-grey w3-hover-black">About</a>
         <a href="qualifications.html" class="w3-bar-item w3-button w3-text-grey w3-hover-black">Resume/Job Info</a>
-		<a href="contact.html" class="w3-bar-item w3-button w3-text-grey w3-hover-black">Contact Us</a>
-        <a href="signin.html" class="w3-bar-item w3-button w3-text-grey w3-hover-black">Sign In/Register</a>
+        <!-- href="contact.html" class="w3-bar-item w3-button w3-text-grey w3-hover-black">Contact Us-->
+      <!-- href="signin.html" class="w3-bar-item w3-button w3-text-grey w3-hover-black">Sign In/Register-->
       </div>
     </nav>
     <!-- !PAGE CONTENT! -->
@@ -32,12 +32,13 @@
         </span>
         <div class="w3-clear"></div>
         <header class="w3-center w3-margin-bottom">
-          <h1>
+          <!--<h1>
             <b>Contact Us</b>
           </h1>
           <p>
             <b>If you have any questions, concerns, or issues, feel free to fill out the form below to contact us. We will follow up with you as soon as we can. Thank you!</b>
           </p>
+        -->
         </header>
       </div>
     </div>
