--- a/templates/register.html
+++ b/templates/register.html
@@ -1,4 +1,4 @@
-{% block title %}Register{% endblock %}
+<!--{% block title %}Register{% endblock %}
 
 {% block content %} 
 
@@ -15,3 +15,4 @@
 </div>
 
 {% endblock %}
+-->
