--- a/templates/qualifications.html
+++ b/templates/qualifications.html
@@ -19,8 +19,8 @@
         <a href="index.html" class="w3-bar-item w3-button w3-text-grey w3-hover-black">Home</a>
         <a href="about.html" class="w3-bar-item w3-button w3-text-grey w3-hover-black">About</a>
         <a href="qualifications.html" class="w3-bar-item w3-button w3-text-grey w3-hover-black">Resume/Job Info</a>
-		<a href="contact.html" class="w3-bar-item w3-button w3-text-grey w3-hover-black">Contact Us</a>
-        <a href="signin.html" class="w3-bar-item w3-button w3-text-grey w3-hover-black">Sign In/Register</a>
+		<!-- href="contact.html" class="w3-bar-item w3-button w3-text-grey w3-hover-black">Contact Us</a>
+        <a href="signin.html" class="w3-bar-item w3-button w3-text-grey w3-hover-black">Sign In/Register -->
       </div>
     </nav>
     <!-- !PAGE CONTENT! -->
