--- a/templates/index.html
+++ b/templates/index.html
@@ -49,14 +49,15 @@
       </div>
     </div>
     <!-- Footer -->
-    <footer class="w3-container w3-padding-64 w3-center w3-opacity w3-xlarge" style="margin-top:128px">
+    <!--footer class="w3-container w3-padding-64 w3-center w3-opacity w3-xlarge" style="margin-top:128px">
       <i class="fa fa-facebook-official w3-hover-opacity"></i>
       <i class="fa fa-instagram w3-hover-opacity"></i>
       <i class="fa fa-snapchat w3-hover-opacity"></i>
-      <!-- <i class="fa fa-pinterest-p w3-hover-opacity"></i> -->
+      <i class="fa fa-pinterest-p w3-hover-opacity"></i>
       <i class="fa fa-twitter w3-hover-opacity"></i>
       <i class="fa fa-linkedin w3-hover-opacity"></i>
     </footer>
+  -->
     <script>
       // Open and close sidebar
       function w3_open() {
