--- a/static/css/qualifications.css
+++ b/static/css/qualifications.css
@@ -38,7 +38,7 @@ textarea {
 }
 
 /* Style for the Submit button */
-input[type="submit"] {
+button[type="submit"] {
   background-color: #4caf50;
   color: #fff;
   font-size: 18px;
