Removed Navbar from Output
Removed Navbar

--- a/templates/output.html
+++ b/templates/output.html
@@ -14,7 +14,7 @@
 	<!-- Future Note: When logged in, users will be able to open a "Profile page in which they can edit profile info" -->
   
     <!-- Sidebar -->
-    <nav class="w3-sidebar w3-black w3-animate-top w3-xxlarge" style="display:none;padding-top:150px" id="mySidebar">
+<!--     <nav class="w3-sidebar w3-black w3-animate-top w3-xxlarge" style="display:none;padding-top:150px" id="mySidebar">
       <a href="javascript:void(0)" onclick="w3_close()" class="w3-button w3-black w3-xxlarge w3-padding w3-display-topright" style="padding:6px 24px">
         <i class="fa fa-remove"></i>
       </a>
@@ -24,8 +24,8 @@
         <a href="qualifications.html" class="w3-bar-item w3-button w3-text-grey w3-hover-black">Resume/Job Info</a>
 		<!--<a href="contact.html" class="w3-bar-item w3-button w3-text-grey w3-hover-black">Contact Us</a>
         <a href="signin.html" class="w3-bar-item w3-button w3-text-grey w3-hover-black">Sign In/Register</a>-->
-      </div>
-    </nav>
+  <!--    </div>
+    </nav> -->
     <!-- !PAGE CONTENT! -->
     <div class="w3-content" style="max-width: 100%">
       <!-- Header -->
