--- a/templates/output.html
+++ b/templates/output.html
@@ -29,11 +29,11 @@
     <!-- !PAGE CONTENT! -->
     <div class="w3-content" style="max-width: 100%">
       <!-- Header -->
-      <div class="w3-opacity">
+<!--       <div class="w3-opacity">
         <span class="w3-button w3-xxlarge w3-white w3-right" onclick="w3_open()">
           <i class="fa fa-bars"></i>
         </span>
-        <div class="w3-clear"></div>
+        <div class="w3-clear"></div> -->
         <header class="w3-center w3-margin-bottom">
           <h1>
             <b>Here Is Your Custom Resume</b>
@@ -58,7 +58,7 @@
       </p> {% endcomment %}
         </header>
       </div>
-    </div> 
+ 
 
 
     <script>
