--- a/templates/output.html
+++ b/templates/output.html
@@ -32,8 +32,8 @@
 <!--       <div class="w3-opacity">
         <span class="w3-button w3-xxlarge w3-white w3-right" onclick="w3_open()">
           <i class="fa fa-bars"></i>
-        </span>
-        <div class="w3-clear"></div> -->
+        </span> -->
+        <div class="w3-clear"></div> 
         <header class="w3-center w3-margin-bottom">
           <h1>
             <b>Here Is Your Custom Resume</b>
@@ -58,6 +58,7 @@
       </p> {% endcomment %}
         </header>
       </div>
+	 </div>
  
 
 
