Fixed Output CSS
Fixed CSS

--- a/templates/output.html
+++ b/templates/output.html
@@ -29,8 +29,8 @@
     <!-- !PAGE CONTENT! -->
     <div class="w3-content" style="max-width: 100%">
       <!-- Header -->
-<!--       <div class="w3-opacity">
-        <span class="w3-button w3-xxlarge w3-white w3-right" onclick="w3_open()">
+       <div class="w3-opacity">
+        <!-- <span class="w3-button w3-xxlarge w3-white w3-right" onclick="w3_open()">
           <i class="fa fa-bars"></i>
         </span> -->
         <div class="w3-clear"></div> 
