Updated About Us Description
Updated About Us page to fit current state of website

--- a/templates/about.html
+++ b/templates/about.html
@@ -45,7 +45,7 @@
       <div class="w3-container w3-padding-64">
         <h2>How It Works</h2>
         <p>To get started, simply register for an account. Once you've registered, you can enter in all of your skills and qualifications that you would include in your resume.</p>
-        <p>When you find a job posting that you're interested in, simply enter the URL link for that job posting on our website. Our website will then scrape the job posting to retrieve the essential qualifications and skills that would best fit that specific job posting and generate your custom resume.</p>
+        <p>When you find a job posting that you're interested in, simply enter in your qualifications and credentials into the Resume/Job Posting section. Once you click "Generate Resume", your custom resume will be generated.</p>
         <h2>Our Mission</h2>
         <p>Our mission is to make the job application process easier for job seekers. We understand that job hunting can be a daunting task, so we created this website to help streamline the process and give job seekers an edge in their search for employment.</p>
         <h2>Our Team</h2>
